# useful-examples

./: LICENSE  README.md  未命名绘图.drawio
compile/cmake/: README.txt
compile/cmake/mult_dir/: CMakeLists.txt  main.c
compile/cmake/mult_dir/lib/: CMakeLists.txt
compile/cmake/mult_dir/src/: CMakeLists.txt  wrap.c
compile/cmake/simple/: CMakeLists.txt  demo1.c  main.c
compile/cmake/simple2/: CMakeLists.txt  foo.c  main.c
compile/dynamic_lib/: Makefile  main.c
compile/make/dynamic_lib/: Makefile
compile/make/dynamic_lib/src/: foo.c  foo2.c
compile/make/static_lib/: Makefile
compile/make/static_lib/include/: foo.h
compile/make/static_lib/src/: foo.c
compile/static_lib/src/: foo2.c
